samples/_failures_safe/1761191891_ae3869_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cec0e05.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_4cec0e05.c:162:17: error: expected declaration or statement at end of input
  162 |                 return 0;
      |                 ^~~~~~
./samples/SAFE/__tmp_4cec0e05.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4cec0e05.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4cec0e05.c:162:17: error: expected declaration or statement at end of input
